--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
     <modules>
         <module>imall-common</module>
         <module>imall-mbg</module>
+        <module>imall-admin</module>
     </modules>
 
 
