--- a/imall-portal/pom.xml
+++ b/imall-portal/pom.xml
@@ -9,13 +9,12 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>imall-admin</artifactId>
+    <artifactId>imall-portal</artifactId>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
         <maven.compiler.target>8</maven.compiler.target>
     </properties>
-
 
     <dependencies>
         <dependency>
@@ -23,7 +22,6 @@
             <artifactId>imall-common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-
         <dependency>
             <groupId>com.situ</groupId>
             <artifactId>imall-mbg</artifactId>
@@ -36,4 +34,5 @@
             <scope>compile</scope>
         </dependency>
     </dependencies>
+
 </project>
