--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,7 @@
         <module>imall-common</module>
         <module>imall-mbg</module>
         <module>imall-admin</module>
+        <module>imall-portal</module>
     </modules>
 
 
@@ -46,7 +47,7 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
-            <version>5.1.41</version>
+            <version>8.0.29</version>
         </dependency>
         <!-- mybatis -->
         <dependency>
