--- a/imall-mbg/pom.xml
+++ b/imall-mbg/pom.xml
@@ -10,6 +10,14 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>imall-mbg</artifactId>
+    <dependencies>
+        <dependency>
+            <groupId>com.situ</groupId>
+            <artifactId>imall-common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+            <scope>compile</scope>
+        </dependency>
+    </dependencies>
 
     <properties>
         <maven.compiler.source>8</maven.compiler.source>
@@ -40,6 +48,12 @@
                         <groupId>mysql</groupId>
                         <artifactId>mysql-connector-java</artifactId>
                         <version>8.0.22</version>
+                    </dependency>
+
+                    <dependency>
+                        <groupId>com.situ</groupId>
+                        <artifactId>imall-common</artifactId>
+                        <version>1.0-SNAPSHOT</version>
                     </dependency>
                 </dependencies>
             </plugin>
