--- a/imall-portal/src/main/resources/application.properties
+++ b/imall-portal/src/main/resources/application.properties
@@ -20,3 +20,8 @@ mybatis.configuration.map-underscore-to-camel-case=true
 # ?????????????
 spring.mvc.view.prefix=/WEB-INF/
 spring.mvc.view.suffix=.jsp
+
+# ??Redis
+spring.redis.database=0
+spring.redis.host=127.0.0.1
+spring.redis.port=6379
